--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>resume</title>
-    <link href="Yvette.css" rel="stylesheet">
+    <link href="layout.css" rel="stylesheet">
     <link href="responsiveness.css" rel="stylesheet" type="text/css">
 </head>
 <body>
