--- a/index.html
+++ b/index.html
@@ -102,23 +102,31 @@
         </div> <!--end edu1/* -->
         <div class="row">
             <div class="col-md-12">
-                <h3 id="edu">EXPERIENCE</h3>
-                <div id="education">
-                    <div id="edu1">
+                <h3 id="exp">EXPERIENCE</h3>
+                <div id="experiance">
+                    <div id="exp1">
                         <div>
                             <svg id="Layer_1" enable-background="new 0 0 506.1 506.1" height="10px" 
                             viewBox="0 0 506.1 506.1" width="10px" xmlns="http://www.w3.org/2000/svg">
                             <path d="m489.609 0h-473.118c-9.108 0-16.491 7.383-16.491 16.491v473.118c0 9.107 7.383 16.491 16.491 16.491h473.119c9.107 0 16.49-7.383 16.49-16.491v-473.118c0-9.108-7.383-16.491-16.491-16.491z"/></svg>
                         </div>
                         <div>
-                            <span id="head">CodeTribe Learnership</span>
-                            <p>June 2020 - Date</p>
+                            <span id="head">System Development Learnership</span>
+                            <p>November 2020 - 31/10/2021</p>
                         </div>
                         <div>
-                            <h4 id="dip">Mlab Coding Academy</h4>
-                            <p>Mobile Application Development, Mobile Slutions Development, SCRUM Agile, Cloud Technologies</p>
+                            <h4 id="dip">Altron Bytes</h4>
+                            <p>Skills Development Programme</p>
                         </div>
-                    </div> <!--end edu1/* -->
+                         <div>
+                            <span id="head">Admin Clerk</span>
+                            <p>Decemberr 2020 - 23/04/2021</p>
+                        </div>
+                        <div>
+                            <h4 id="dip">Sedibeng Primary School</h4>
+                            <p>Presidential Youth Employment Initiative</p>
+                        </div>
+                    </div> <!--end exp1/* -->
                     <div class="row">
                         <div class="col-md-12">
                             <h3 id="edu">CONTACT</h3>
@@ -254,9 +262,9 @@
         16.49-7.383 16.49-16.491v-473.118c0-9.108-7.383-16.491-16.491-16.491z"/></svg>
     </div>
     <div>
-        <span id="head">Mr Mothlabeng</span>
-        <p>CodeTribe Intructor(Mlab Coding Academy)</p>
-        <p>tyson@mlab.co.za</p>
+        <span id="head">Mr Tjatji</span>
+        <p>Deputy Principal(Sedibeng Primary School)</p>
+        <p>0827866928</p>
     </div>
 </div> 
 
