--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         </div> <!--end edu1/* -->
         <div class="row">
             <div class="col-md-12">
-                <h3 id="exp">EXPERIENCE</h3>
-                <div id="experiance">
-                    <div id="exp1">
+                <h3 id="edu">EXPERIENCE</h3>
+                <div id="education">
+                    <div id="edu">
                         <div>
                             <svg id="Layer_1" enable-background="new 0 0 506.1 506.1" height="10px" 
                             viewBox="0 0 506.1 506.1" width="10px" xmlns="http://www.w3.org/2000/svg">
